2001-09-15  John Levon  <moz@compsoc.man.ac.uk>

	* all Makefile.in: install should depend on all

	* oprofpp.c: fixes for Athlon 4 counters. Enable debug info
	  for list-symbol. Some stricter checking

2001-09-15  Philippe Elie  <ph_e@club-internet.fr>

	* op_events.c: some static variable to global
	* op_user.h: export these

	* oprofile.c: typo in comment

	* dae/opd_proc.c: fix size of samples files

2001-09-13  Dave Jones  <davej@suse.de>

	* doc/oprofile.1.in:
	  Update so it doesn't say 'Intel only'
	* dae/op_start:
	  Fix output so that it prints [0-3] instead of [0-4[

2001-09-12  Philippe Elie  <ph_e@club-internet.fr>

	* pp/oprofpp.c: fix cpu type output for opf_filter

	* dae/op_stop: return error code properly

2001-09-12  John Levon  <moz@compsoc.man.ac.uk>

	* pp/oprofpp.c: print name of cpu type
 
	* dae/op_stop:
	* dae/op_start: re-organise, tidy
 
2001-09-12  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.c: fix small but triggerable
	  SMP dump race
 
2001-09-12  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.h:
	* oprofile.c:
	* op_x86.c: move some code about
 
	* op_syscalls.c: add comment
 
2001-09-12  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: remove warning
 
	* op_user.h: 
	* op_events.c: fix and clean up cpu type detection
 
	* op_init.c: fix email
 
	* oprofile.c: add IRQ stats. Not sure whether to keep...
 
2001-09-12  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.h:
	* oprofile.c: use cpu_number_map (pedantry thing)
 
2001-09-07  Philippe Elie  <ph_e@club-internet.fr>

	* oprofile.c: remove /proc/.../cpu_type. Check if user
	  mode cpu type detection is identical to module cpu type
	* op_events.h:
	* op_events.c: add op_get_cpu_type(). script can get cpu_type
	  by op_help --get-cpu-type
	* gui/oprofile: use it	
	* dae/oprofiled.c: ditto
	* dae/op_start: ditto, pass expected_cpu_type to module
	* doc/oprofile.sgml: update
	* doc/oprofile.1.in: update
	* pp/oprofpp.c: get cpu_type from samples file